# CampusKnowledgeBase

./: .gitignore  README.md
aiml/: __init__.py  askllm.py  embedder.py  main.py  pyproject.toml  rag.py
aiml/ingestion/: chunker.py  ingest.py
aiml/ingestion/output/: FY_Sem-1_faiss.index
backend/: go.mod  go.sum
frontend/: package-lock.json  package.json
frontend/src/app/chat/[sessionId]/: page.tsx
frontend/src/app/login/: LoginClient.tsx  page.tsx
frontend/src/components/chat/: ChatWindow.tsx
frontend/src/contexts/: SemesterContext.tsx
